--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-auth.js"></script>
-
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "AIzaSyCrznhXYA3A2wo1hSKpbRMV0EkCx_nwhiA",
-            authDomain: "myweb-00.firebaseapp.com",
-            databaseURL: "https://myweb-00-default-rtdb.firebaseio.com",
+            apiKey: "AIzaSyBl3g3Ef8_fdG4WRycIAwfN8G27aAD3ycg",
+            authDomain: "portfolio-f12.firebaseapp.com",
+            databaseURL: "https://portfolio-f12-default-rtdb.firebaseio.com",
             projectId: "myweb-00",
-            storageBucket: "myweb-00.appspot.com",
-            messagingSenderId: "664882373389",
-            appId: "1:664882373389:web:411ad397206cb02885c644",
-            measurementId: "G-5QNYX0V9CK"
+            storageBucket: "portfolio-f12.appspot.com",
+            messagingSenderId: "168604676482",
+            appId: "1:168604676482:web:a011248e19ec8622f15f9b",
+            measurementId: "G-VC314HVPW0"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
@@ -32,14 +31,12 @@
     <h1>Chat App</h1>
     <span id="error"></span>
     <div class="form">
-        <input type="text" id="name" placeholder="Enter Your Name">
+        <input type="text" id="Email1" placeholder="Email Address">
         <br>
-        <input type="text" id="Email" placeholder="Email Address">
+        <input type="password" id="password1" placeholder="Password">
         <br>
-        <input type="password" id="password" placeholder="Password">
-        <br>
-        <button class="formbtn" onclick="signup()" id="submit">Sign Up</button>
         <button class="formbtn" onclick="login()">Log in</button>
+        <button class="formbtn" onclick="IAccount()">I dont have'n account!</button>
     </div>
 </body>
 <script src="app.js"></script>
